Refactor: Refactor code smells